fixtures/cs-jwt-03/bad/verify-four-args-none.ts
import jwt from "jsonwebtoken";

const secret = process.env.JWT_SECRET ?? "dev-secret";

export function readToken(token: string) {
	jwt.verify(token, secret, { algorithms: ["none"] }, (err, payload) => {
		if (err) throw err;
		void payload;
	});
}
